force-app/main/default/objects/Clear_Result__c/Clear_Result__c.object-meta.xml
<CustomObject>
    <label>Clear Result</label>
    <nameField>
        <label>Clear Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clear Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>