force-app/main/default/objects/Clear_Result__c/fields/Address_1ST_Reported_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Address_1ST_Reported_90_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Address 1ST Reported &lt;90 Days</description>
    <label>Address 1ST Reported &lt;90 Days</label>
    <type>Checkbox</type>
</CustomField>