force-app/main/default/objects/Clear_Result__c/fields/Age_Younger_than_SSN_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Age_Younger_than_SSN_Issue_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Age Younger than SSN Issue Date</description>
    <label>Age Younger than SSN Issue Date</label>
    <type>Checkbox</type>
</CustomField>