force-app/main/default/objects/Clear_Result__c/fields/akaFirstName__c.field-meta.xml
<CustomField>
    <fullName>akaFirstName__c</fullName>
    <label>akaFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>