force-app/main/default/objects/Clear_Result__c/fields/akaLastName__c.field-meta.xml
<CustomField>
    <fullName>akaLastName__c</fullName>
    <label>akaLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>