force-app/main/default/objects/Clear_Result__c/fields/Arrest_Record__c.field-meta.xml
<CustomField>
    <fullName>Arrest_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrest Record</label>
    <type>Checkbox</type>
</CustomField>