force-app/main/default/objects/Clear_Result__c/fields/Associate_or_Relative_with_a_Prison_Addr__c.field-meta.xml
<CustomField>
    <fullName>Associate_or_Relative_with_a_Prison_Addr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate or Relative with a Prison Addr</label>
    <type>Checkbox</type>
</CustomField>