force-app/main/default/objects/Clear_Result__c/fields/Associate_or_Relative_With_a_Residential__c.field-meta.xml
<CustomField>
    <fullName>Associate_or_Relative_With_a_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate or Relative With a Residential</label>
    <type>Checkbox</type>
</CustomField>