force-app/main/default/objects/Clear_Result__c/fields/Associate_or_Relative_with_P_O_Box_list__c.field-meta.xml
<CustomField>
    <fullName>Associate_or_Relative_with_P_O_Box_list__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate or Relative with P.O. Box list</label>
    <type>Checkbox</type>
</CustomField>