force-app/main/default/objects/Clear_Result__c/fields/Associate_with_OFAC_Global_Sanction_or__c.field-meta.xml
<CustomField>
    <fullName>Associate_with_OFAC_Global_Sanction_or__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate with OFAC, Global Sanction or</label>
    <type>Checkbox</type>
</CustomField>