force-app/main/default/objects/Clear_Result__c/fields/Bankruptcy1__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankruptcy1</label>
    <type>Checkbox</type>
</CustomField>