force-app/main/default/objects/Clear_Result__c/fields/Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>