force-app/main/default/objects/Clear_Result__c/fields/Birth_date__c.field-meta.xml
<CustomField>
    <fullName>Birth_date__c</fullName>
    <label>Birth date</label>
    <type>Date</type>
</CustomField>