force-app/main/default/objects/Clear_Result__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clear Results</relationshipLabel>
    <relationshipName>Clear_Results</relationshipName>
    <type>Lookup</type>
</CustomField>