force-app/main/default/objects/Clear_Result__c/fields/DL_Number__c.field-meta.xml
<CustomField>
    <fullName>DL_Number__c</fullName>
    <label>DL Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>