force-app/main/default/objects/Clear_Result__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <label>EntityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>