force-app/main/default/objects/Clear_Result__c/fields/Global_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>Global_Sanctions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Sanctions</label>
    <type>Checkbox</type>
</CustomField>