force-app/main/default/objects/Clear_Result__c/fields/Group_ID_for_Person_Search__c.field-meta.xml
<CustomField>
    <fullName>Group_ID_for_Person_Search__c</fullName>
    <label>Group ID for Person Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>