force-app/main/default/objects/Clear_Result__c/fields/Group_ID_for_Risk_search__c.field-meta.xml
<CustomField>
    <fullName>Group_ID_for_Risk_search__c</fullName>
    <label>Group ID for Risk search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>