force-app/main/default/objects/Clear_Result__c/fields/Healthcare_Sanction__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Sanction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Healthcare Sanction</label>
    <type>Checkbox</type>
</CustomField>