force-app/main/default/objects/Clear_Result__c/fields/Last_4_Digit_of_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digit_of_SSN__c</fullName>
    <label>Last 4 Digit of SSN</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>