force-app/main/default/objects/Clear_Result__c/fields/Multiple_SSNs__c.field-meta.xml
<CustomField>
    <fullName>Multiple_SSNs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple SSNs</label>
    <type>Checkbox</type>
</CustomField>