force-app/main/default/objects/Clear_Result__c/fields/OFAC_listing__c.field-meta.xml
<CustomField>
    <fullName>OFAC_listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OFAC listing</label>
    <type>Checkbox</type>
</CustomField>