force-app/main/default/objects/Clear_Result__c/fields/P_O_Box_listed_as_Address__c.field-meta.xml
<CustomField>
    <fullName>P_O_Box_listed_as_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.O. Box listed as Address</label>
    <type>Checkbox</type>
</CustomField>