force-app/main/default/objects/Clear_Result__c/fields/Person_Associated_with_Marijuana_Related__c.field-meta.xml
<CustomField>
    <fullName>Person_Associated_with_Marijuana_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person Associated with Marijuana Related</label>
    <type>Checkbox</type>
</CustomField>