force-app/main/default/objects/Clear_Result__c/fields/Person_Search_Report_Result__c.field-meta.xml
<CustomField>
    <fullName>Person_Search_Report_Result__c</fullName>
    <label>Person Search Report Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>