force-app/main/default/objects/Clear_Result__c/fields/POSSIBLE_QUICK_ANALYSIS_FLAGS__c.field-meta.xml
<CustomField>
    <fullName>POSSIBLE_QUICK_ANALYSIS_FLAGS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POSSIBLE QUICK ANALYSIS FLAGS</label>
    <type>Checkbox</type>
</CustomField>