force-app/main/default/objects/Clear_Result__c/fields/Prison_Address_on_Record__c.field-meta.xml
<CustomField>
    <fullName>Prison_Address_on_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prison Address on Record</label>
    <type>Checkbox</type>
</CustomField>