force-app/main/default/objects/Clear_Result__c/fields/Recorded_as_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Recorded_as_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorded as Deceased</label>
    <type>Checkbox</type>
</CustomField>