force-app/main/default/objects/Clear_Result__c/fields/Residential_Address_Used_as_a_Business_A__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address_Used_as_a_Business_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residential Address Used as a Business A</label>
    <type>Checkbox</type>
</CustomField>