force-app/main/default/objects/Clear_Result__c/fields/Risk_Number__c.field-meta.xml
<CustomField>
    <fullName>Risk_Number__c</fullName>
    <label>Risk Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>