force-app/main/default/objects/Clear_Result__c/fields/Risk_Search_Report_Result__c.field-meta.xml
<CustomField>
    <fullName>Risk_Search_Report_Result__c</fullName>
    <label>Risk Search Report Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>