force-app/main/default/objects/Clear_Result__c/fields/SSN_Format_is_Invalid__c.field-meta.xml
<CustomField>
    <fullName>SSN_Format_is_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSN Format is Invalid</label>
    <type>Checkbox</type>
</CustomField>