force-app/main/default/objects/Clear_Result__c/fields/SSN_Matches_multiple_individuals__c.field-meta.xml
<CustomField>
    <fullName>SSN_Matches_multiple_individuals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSN Matches multiple individuals</label>
    <type>Checkbox</type>
</CustomField>