force-app/main/default/objects/Clear_Result__c/fields/Telephone_Number_Inconsistent_with_Addre__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number_Inconsistent_with_Addre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telephone Number Inconsistent with Addre</label>
    <type>Checkbox</type>
</CustomField>